{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 14,
  "lineage": "75046fd3-d1e4-2af6-073f-382b7961f5b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "covalent_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5daaa3a7fb3378b",
            "arn": "arn:aws:ec2:us-east-2:381491939141:instance/i-0b9367ff90c3ff668",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9367ff90c3ff668",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "covalent-ec2-executor-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af7829790bda03b2",
            "private_dns": "ip-10-0-0-222.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.222",
            "public_dns": "ec2-3-12-123-32.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.123.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080727d94e96e6a81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0800506154b042acd",
            "tags": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4"
            },
            "tags_all": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009143a9e7b078f64"
            ]
          },
          "dependencies": [
            "aws_security_group.covalent_firewall",
            "data.aws_ami.ubuntu",
            "data.http.myip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "covalent_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491939141:security-group/sg-009143a9e7b078f64",
            "description": "Allow traffic to Covalent server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009143a9e7b078f64",
            "ingress": [
              {
                "cidr_blocks": [
                  "142.117.230.244/32"
                ],
                "description": "Allow SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-firewall",
            "name_prefix": "",
            "owner_id": "381491939141",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a67418f3fb5e7eff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491939141:network-acl/acl-0be90dc6ff9e315ce",
            "default_network_acl_id": "acl-0be90dc6ff9e315ce",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0be90dc6ff9e315ce",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "381491939141",
            "subnet_ids": [
              "subnet-0800506154b042acd"
            ],
            "tags": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-default"
            },
            "tags_all": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-default"
            },
            "vpc_id": "vpc-0a67418f3fb5e7eff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491939141:route-table/rtb-0066942bdef23cad4",
            "default_route_table_id": "rtb-0066942bdef23cad4",
            "id": "rtb-0066942bdef23cad4",
            "owner_id": "381491939141",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-default"
            },
            "tags_all": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a67418f3fb5e7eff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491939141:security-group/sg-00dba412217f1a34a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00dba412217f1a34a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "381491939141",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-default"
            },
            "tags_all": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-default"
            },
            "vpc_id": "vpc-0a67418f3fb5e7eff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491939141:internet-gateway/igw-080746ef0c0f20f88",
            "id": "igw-080746ef0c0f20f88",
            "owner_id": "381491939141",
            "tags": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc"
            },
            "tags_all": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc"
            },
            "vpc_id": "vpc-0a67418f3fb5e7eff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080746ef0c0f20f88",
            "id": "r-rtb-0ffb020d4dc8d6eac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ffb020d4dc8d6eac",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491939141:route-table/rtb-0ffb020d4dc8d6eac",
            "id": "rtb-0ffb020d4dc8d6eac",
            "owner_id": "381491939141",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080746ef0c0f20f88",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-public"
            },
            "tags_all": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a67418f3fb5e7eff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b9d75e08ec053ae",
            "route_table_id": "rtb-0ffb020d4dc8d6eac",
            "subnet_id": "subnet-0800506154b042acd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491939141:subnet/subnet-0800506154b042acd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0800506154b042acd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491939141",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-0a67418f3fb5e7eff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381491939141:vpc/vpc-0a67418f3fb5e7eff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0be90dc6ff9e315ce",
            "default_route_table_id": "rtb-0066942bdef23cad4",
            "default_security_group_id": "sg-00dba412217f1a34a",
            "dhcp_options_id": "dopt-0739603881deafe8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a67418f3fb5e7eff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0066942bdef23cad4",
            "owner_id": "381491939141",
            "tags": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc"
            },
            "tags_all": {
              "Name": "covalent-ec2-task-0-test-cpu-testing-cpu-71669879043a3864225aabb94f91a2d4-vpc"
            }
          }
        }
      ]
    }
  ]
}